--- a/styles.css
+++ b/styles.css
@@ -1,57 +1,56 @@
 html,
 body {
-  padding: 0;
   margin: 0;
+  margin-top: 0.5em;
+  padding: 0;
+}
+
+svg {
+  font: 10px sans-serif;
+  text-align: center;
+  display: block;
+  margin: auto;
+}
+
+a {
+  text-decoration: none;
 }
 
 body {
-  display: flex;
-  justify-content: center;
-  font-family: 'Arial';
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-#main {
-  width: 1000px;
-  display: flex;
-  padding-top: 1rem;
-  flex-direction: column;
-  align-items: center;
+.tile-text {
+  cursor: default;
 }
 
-.counties {
-  fill: none;
+#title {
+  font-size: 45px;
+  margin-bottom: 10px;
 }
 
-.states {
-  fill: none;
-  stroke: #fff;
-  stroke-linejoin: round;
+#description {
+  padding-bottom: 1.5rem;
 }
 
 div.tooltip {
   position: absolute;
   padding: 10px;
   font: 12px Arial;
-  background: rgba(255, 255, 204, 0.9);
+  background: rgba(255, 255, 204, 0.95);
   box-shadow: 1px 1px 10px rgba(128, 128, 128, 0.6);
-  border: 0px;
+  border: 0;
   border-radius: 2px;
   pointer-events: none;
 }
 
-#title {
-  font-size: 3.5rem;
-}
-
-#description {
+#legend {
+  font-size: 15px;
   text-align: center;
-}
-
-#source {
-  align-self: flex-end;
+  display: block;
+  margin: auto;
+  padding-bottom: 5px;
+  margin-bottom: 2rem;
   margin-top: 1rem;
-}
-
-a {
-  text-decoration: none;
 }
